# boombox_adf

./: BOOMBOX_PIN.ods  CHANGELOG.md  CMakeLists.txt  README.md  WIFI_MEMORY_FIX.md  boombox_adf.code-workspace  memory_analysis_report.md  partitions.csv  partitions_bt_sink_example.csv  playlist  playlist.pls  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.old
components/boombox_board/: CMakeLists.txt  component.mk
components/boombox_board/boombox_board_v1_0/: board.c  board.h  board_def.h  board_pins_config.c  board_pins_config.h
components/commons/: .cproject  .project  CMakeLists.txt  common.c
components/commons/include/: common.h  commons.h
components/drv/: CMakeLists.txt  Kconfig  disp_driver.c  disp_driver.h  lvgl_spi_conf.h
components/drv/tft/: CMakeLists.txt  Kconfig  disp_spi.c  disp_spi.h  ili9341.c  ili9341.h
components/drv/touch/: CMakeLists.txt  Kconfig  touch_driver.c  touch_driver.h  tp_spi.c  xpt2046.c  xpt2046.h
components/encoder/: .cproject  .project  CMakeLists.txt  Kconfig  encoder.h
components/esp_wifi_manager/: BOOMBOX_API.md  CMakeLists.txt  README.md
components/esp_wifi_manager/frontend/: package.json
components/esp_wifi_manager/frontend/src/: App.tsx  types.ts
components/esp_wifi_manager/frontend/src/api/: boombox.ts
components/esp_wifi_manager/frontend/src/components/: BoomboxControl.css  BoomboxControl.tsx
components/esp_wifi_manager/frontend/src/styles/: base.css  variables.css
components/esp_wifi_manager/include/: boombox_playlist.h
components/esp_wifi_manager/src/: esp_wifi_manager.c  esp_wifi_manager_ap.c  esp_wifi_manager_ble.c  esp_wifi_manager_boombox.c  esp_wifi_manager_http.c  esp_wifi_manager_network.c  esp_wifi_manager_priv.h
components/gui/: .cproject  CMakeLists.txt  Kconfig  component.mk  encoder  gui.c  gui.h
components/gui/custom/: custom.c  custom.h  custom.py
components/gui/gui_touch_calibration/: README.md  lv_tc_screen.c
components/lvgl/: .cproject  lv_conf.h
components/lvgl/src/: lv_conf_internal.h
components/lvgl/src/extra/: lv_extra.mk
components/lvgl/src/extra/widgets/: lv_widgets.h
components/lvgl/src/extra/widgets/textprogress/: lv_textprogress.c
components/lvgl/src/font/: lv_font.h  lv_font_Avenis_18.c  lv_font_DejaVuSans_16.c  lv_font_DejaVuSans_18.c  lv_font_arial_18.c  lv_font_montserratMedium_16.c  lv_font_ubuntu_18.c
components/lvgl/tests/: .cproject
components/si4735/: .cproject  .project  CMakeLists.txt  Kconfig.projbuild  README.md  component.mk  idf_component.yml  si4735.c
components/si4735/example/: radio.c  radio_1.c
components/si4735/include/: patch_init.h  si4735.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  boombox.c  boombox.h  boombox_adf.code-workspace  copilot  idf_component.yml  playlist_parser.c  playlist_parser.h
main/task/: air_task.c  air_task.h  audio_equalizer.c  audio_equalizer.h  bt_task.c  bt_task.h  http_task.c  http_task.h  server_task.c  server_task.h
spiffs/: playlist.pls
spiffs_image/: playlist.pls
spiffs_image/www/: index.html
test/: pytest_spiffsgen_example.py
